test/error/semantic/use_before_definition_func.kat
func main(argc: int, argv: str) => int {
  let n: int = add(1, 2) + 3;
}
